@@ -14,7 +14,6 @@ import time
 import warnings
 
 from debian_linux.debian import Changelog, VersionLinux
-from debian_linux.patches import PatchSeries
 
 
 class Main(object):
@@ -52,7 +51,7 @@ class Main(object):
             if len(self.input_files) > 1:
                 self.upstream_patch(self.input_files[1])
 
-            # debian_patch() will change file mtimes.  Capture the
+            # exclude_files() will change dir mtimes.  Capture the
             # original release time so we can apply it to the final
             # tarball.  Note this doesn't work in case we apply an
             # upstream patch, as that doesn't carry a release time.
@@ -62,7 +61,6 @@ class Main(object):
                     os.stat(os.path.join(self.dir, self.orig, 'Makefile'))
                     .st_mtime))
 
-            self.debian_patch()
             self.exclude_files()
             os.umask(old_umask)
             self.tar(orig_date)
@@ -125,13 +123,6 @@ class Main(object):
         cmdline.append('| (cd %s; patch -p1 -f -s -t --no-backup-if-mismatch)' % os.path.join(self.dir, self.orig))
         if os.spawnv(os.P_WAIT, '/bin/sh', ['sh', '-c', ' '.join(cmdline)]):
             raise RuntimeError("Can't patch source")
-
-    def debian_patch(self):
-        name = "orig"
-        self.log("Patching source with debian patch (series %s)\n" % name)
-        fp = open("debian/patches/series-" + name)
-        series = PatchSeries(name, "debian/patches", fp)
-        series(dir=os.path.join(self.dir, self.orig))
 
     def exclude_files(self):
         self.log("Excluding file patterns specified in debian/copyright\n")
