@@ -25,6 +25,7 @@ linux (4.18~rc7-1~exp1) UNRELEASED; urgency=medium
     field
   * Move file exclusion from d/p/debian/dfsg/files-1 to d/copyright
   * Move disabling of broken features from d/p/series-orig to d/p/series
+  * Remove our private patch system, which is no longer needed
 
  -- Uwe Kleine-König <ukleinek@debian.org>  Sat, 21 Jul 2018 16:52:01 +0200
 
